# shipcrawler-worker

./: README.md  pyproject.toml
shipcrawler_worker/: __init__.py  worker.py
shipcrawler_worker/discovery/: __init__.py  ais_port_scanner.py  geo_scanner.py  port_config.py
tests/: test_geo.py  test_worker.py
