[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shipcrawler-worker"
version = "0.1.0"
description = "ShipCrawler worker for Sirb — vessel OSINT pipeline"
authors = [{name = "Ahmed Nagi Nasr"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "sirb @ git+https://github.com/ahmdngi/sirb.git",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
